https://github.com/nasa/nos3/issues/107 - Begin implementing NOS_* clock and timer functions.  These must be explicitly used in the OSAL as replacements for clock and timer functions if desired.

--- a/src/os/nos/CMakeLists.txt
+++ b/src/os/nos/CMakeLists.txt
@@ -24,6 +24,7 @@ set(NOS_BASE_SRCLIST
     ../posix/src/os-impl-queues.c
     ../posix/src/os-impl-tasks.c
     ../posix/src/os-impl-timebase.c
+    src/NOS-time.c
 )
 
 # The FPU and interrupt modules are deprecated.
