https://github.com/nasa/nos3/issues/107 - Began using the NOS_clock_* functions that were implemented.

--- a/src/os/nos/CMakeLists.txt
+++ b/src/os/nos/CMakeLists.txt
@@ -10,8 +10,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../posix/inc)
 
 # The basic set of files which are always built
 set(NOS_BASE_SRCLIST
-    ../posix/src/os-impl-binsem.c
-    ../posix/src/os-impl-common.c
     ../posix/src/os-impl-console.c
     ../posix/src/os-impl-countsem.c
     ../posix/src/os-impl-dirs.c
@@ -22,10 +20,13 @@ set(NOS_BASE_SRCLIST
     ../posix/src/os-impl-idmap.c
     ../posix/src/os-impl-mutex.c
     ../posix/src/os-impl-queues.c
-    ../posix/src/os-impl-tasks.c
-    ../posix/src/os-impl-timebase.c
     src/NOS-time.c
+    src/os-impl-binsem.c
+    src/os-impl-bsd-select.c
+    src/os-impl-common.c
     src/os-impl-nos-gettime.c
+    src/os-impl-tasks.c
+    src/os-impl-timebase.c
 )
 
 # The FPU and interrupt modules are deprecated.
@@ -45,7 +46,6 @@ set(NOS_IMPL_SRCLIST
     ../portable/os-impl-posix-io.c
     ../portable/os-impl-posix-files.c
     ../portable/os-impl-posix-dirs.c
-    ../portable/os-impl-bsd-select.c
 )
 
 if (OSAL_CONFIG_INCLUDE_SHELL)
