[nasa/nos3#88] Updates to conform with draco-rc4 continued;

--- a/src/bsp/nos-linux/CMakeLists.txt
+++ b/src/bsp/nos-linux/CMakeLists.txt
@@ -32,7 +32,7 @@ target_link_libraries(osal_public_api INTERFACE
 
 # This BSP only works with "posix" OS layer.
 # Confirming this reduces risk of accidental misconfiguration
-set_property(TARGET osal_nos-linux_impl PROPERTY OSAL_EXPECTED_OSTYPE "posix")
+set_property(TARGET osal_nos-linux_impl PROPERTY OSAL_EXPECTED_OSTYPE "nos")
 
 # Configure the ut_coverage_compile and ut_coverage_link for enabling coverage
 # testing on this platform.
